# $Id$

2007-06-27	Ivan Y. Khvostishkov

	* main/Utils/IO/: BufferedInputStream, FileInputStream and
	StringInputStream implemented, changed default behaviour for parent
	classes.

2007-06-27	Denis M. Gabaidulin

	* main/Flow/ModelAndView.class.php: viewIsNormal method added.

2007-06-25	Konstantin V. Arkhipov

	 * main/DAOs/Workers/BaseDaoWorker.class.php: fixed incomplete objects
	 by-query caching.

2007-06-22	Anton E. Lebedevich

	* main/Base/Calendar*: calendar moved to Date.

2007-06-21	Dmitry A. Lomash

	* test/main/FeedReaderTest.class.php: added tests for FeedReader.

2007-06-21	Dmitry A. Lomash

	* main/Utils/Feed/: added feed manipulation classes.

2007-06-20	Konstantin V. Arkhipov

	* main/DAOs/: low-level cache stuff isolated from mere mortals:
	getCachedById, getCachedByQuery, cacheById, cacheByQuery,
	cacheListByQuery, uncacheByQuery.

	* main/DAOs/GenericDAO.class.php: now all methods returning single
	object or object list are using identity map.

2007-06-19	Konstantin V. Arkhipov

	* main/SPL/bundled/: removed, it was a bad idea.

2007-06-18	Denis M. Gabaidulin

	* main/core/Form/Primitives/PrimitiveString.class.php: simple url
	pattern added.

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-15	Dmitry A. Lomash

	* core/Base/: compare() moved from Timestamp to Date.

2007-06-14	Sergey M. Skachkov

	* main/Utils/TidyValidator.class.php: simple HTML validator and
	repairer introduced.

2007-06-14	Konstantin V. Arkhipov

	* global.inc.php.tpl: __autoload() now able to handle classes with
	broken declarations.

2007-06-13	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: getCustom() now able to return
	final value if index is specified.

2007-06-10	Konstantin V. Arkhipov

	* main/Flow/FormedController.class.php: removed.

2007-06-04	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: cutOnSpace() added.

2007-05-30	Konstantin V. Arkhipov
